--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 
 <body>
-
-  <input type="text" class="body-input input-el js-input">
-  <button class="body-button input-btn js-button">Save Input</button>
-  <ul class="js-list body-list"></ul>
-
+  <h2 class="title">MIS ENLACES</h2>
+  <main>
+    <input type="text" class="input input-el js-input">
+    <button class="button input-btn js-addButton">GUARDAR</button>
+    <button class="button input-btn js-deleteButton">BORRAR</button>
+    <ul class="js-list list"></ul>
+  </main>
   <script src="main.js"></script>
 </body>
 
