add tab function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <main>
     <input type="text" class="input input-el js-input">
     <button class="button input-btn js-addButton">GUARDAR</button>
+    <button class="button input-btn js-saveTabButton">GUARDAR el TAB</button>
     <button class="button input-btn js-deleteButton">BORRAR</button>
     <ul class="js-list list"></ul>
   </main>
