--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <h2 class="title">MIS ENLACES</h2>
   <main>
     <input type="text" class="input input-el js-input">
-    <button class="button input-btn js-addButton">GUARDAR</button>
-    <button class="button input-btn js-saveTabButton">GUARDAR el TAB</button>
-    <button class="button input-btn js-deleteButton">BORRAR</button>
+    <button class="button input-btn js-addButton">GUARDAR la LISTA</button>
+    <button class="button input-btn js-saveTabButton">GUARDAR TAB</button>
+    <button class="button input-btn js-deleteButton">BORRAR LISTA</button>
+    <button class="button input-btn js-deleteItemButton">BORRAR elemento</button>
     <ul class="js-list list"></ul>
   </main>
   <script src="main.js"></script>
