--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <h2 class="title">MIS ENLACES</h2>
   <main>
-    <input type="text" class="input input-el js-input">
-    <button class="button input-btn js-addButton">GUARDAR la LISTA</button>
-    <button class="button input-btn js-saveTabButton">GUARDAR TAB</button>
-    <button class="button input-btn js-deleteButton">BORRAR LISTA</button>
+    <input type="text" class="input input-el js-input-el">
+    <button class="button input-btn js-input-btn">AÑADIR a la LISTA</button>
+    <button class="button input-btn js-tab-btn">GUARDAR TAB</button>
+    <button class="button input-btn js-delete-btn">BORRAR LISTA</button>
     <button class="button input-btn js-deleteItemButton">BORRAR elemento</button>
     <ul class="js-list list"></ul>
   </main>
