--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   <h2 class="title">MIS ENLACES</h2>
   <main>
     <input type="text" class="input input-el js-input-el">
-    <button class="button input-btn js-input-btn">AÑADIR a la LISTA</button>
-    <button class="button input-btn js-tab-btn">GUARDAR TAB</button>
-    <button class="button input-btn js-delete-btn">BORRAR LISTA</button>
-    <button class="button input-btn js-deleteItemButton">BORRAR elemento</button>
-    <ul class="js-list list"></ul>
+    <form action="" class="form">
+      <button class="button input-btn add-btn js-input-btn">AÑADIR a la LISTA</button>
+      <button class="button input-btn add-btn js-tab-btn">GUARDAR TAB</button>
+      <button class="button input-btn delete-btn js-delete-btn">BORRAR LISTA</button>
+      <button class="button input-btn js-deleteItemButton delete-btn">BORRAR elemento</button>
+      <ul class="js-list list"></ul>
+    </form>
   </main>
   <script src="main.js"></script>
 </body>
